--- a/index.html
+++ b/index.html
@@ -37,11 +37,25 @@
       <div class="secao2__descricao">
         <p class="secao2__titulo">Parcerias Sustentáveis</p>
         <p class="secao2__texto">
-          As parcerias entre fazendas, mercados e escolas trazem alimentos frescos e saudáveis para a cidade, ao mesmo tempo que proporcionam uma fonte de renda sustentável para os agricultores. Conheça mais sobre como essas iniciativas ajudam a reduzir desperdícios e promover uma alimentação mais saudável.
+          Recentemente, o planeta Terra ultrapassou a marca de 8 bilhões de habitantes segundo dados da <a href="https://www.unfpa.org/">UNFPA</a>. Sendo assim, com o crescimento da população mundial, desafios socioeconômicos para manter um padrão de alimentação saudável e acessível para todos os setores da sociedade são enfrentados. Sendo assim, podemos analisar todas as vantagens que parcerias entre escolas, mercados e pequenos produtores rurais podem proporcionar para amenizar a problemática.
         </p>
       </div>
-      <img src="img/criancas2.jpeg" alt="Parceria entre campo e cidade" class="secao2__imagem"/>
     </section>
+
+    <!--carrossel-->
+    <p class="carrossel-titulo">Algumas vantagens dessas parcerias</p>
+  <section class="carrossel-body">
+    <div class="carrossel">
+      <div class="container" id="imagem">
+        <img src="img/img1.png" alt="primeira imagem">
+        <img src="img/img2.png" alt="segunda imagem">
+        <img src="img/img3.png" alt="terceira imagem">
+        <img src="img/img4.png" alt="quarta imagem">
+      </div>
+    </div>
+</section>
+
+    <!--carrossel-->
 
     <section>
       <div class="secao3__titulo">
@@ -49,9 +63,12 @@
       </div>
       <div class="secao3__subtitulo">
         <h2 class="secao3__img__subtitulo">
-          Os alimentos frescos e naturais são ricos em nutrientes e ajudam a prevenir doenças crônicas. Descubra como uma alimentação equilibrada pode melhorar sua qualidade de vida.
+          Com as refeições sendo preparadas com os alimentos provenientes dessas colaborações, é possível obter refeições saudáveis e ricas em nutrientes, já que tais alimentos são produzidos de forma orgânica e livre de agrotóxicos. Com uma alimentação saudável, é possível desfrutar de uma vida mais produtiva e de qualidade, aumentando sua imunidade e ajudando a prevenir doenças crônicas.
         </h2>
       </div>
+      <div class="secao3__imagem">
+      <img src="img/criancas2.jpeg" alt="Parceria entre campo e cidade" class="secao3__imagem"/>
+    </div>
     </section>
 
     <section class="container">
