--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <!--carrossel-->
 
   <p class="carrossel-titulo">
-    Vantagens de alguns alimentos orgânicos em sua alimentção
+    Vantagens de alguns alimentos orgânicos em sua alimentação
   </p>
 
   <div class="slider">
